--- a/src/components/worldcup.css
+++ b/src/components/worldcup.css
@@ -36,14 +36,15 @@
 }
 
 .contents_A {
-    margin-top: 7rem;
+    margin-top: 6rem;
     margin-right: 1rem;
     display: inline-block;
-    width: 48%;
+    width: 43%;
     height: 70%;
     background-color: rgb(180, 133, 133);
     border-radius: 0.5rem;
     border: 3px solid black;
+    padding: 1rem;
 }
 
 .character_name_A {
@@ -51,19 +52,39 @@
     font-size: 3rem;
 }
 
+.character_img_A {
+    width: 100%;
+    height: 85%;
+    background-color: bisque;
+    border-radius: 1rem;
+    /* background-image: url("../assets/hodu.png"); */
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contents_B {
+    margin-top: 6rem;
+    display: inline-block;
+    width: 43%;
+    height: 70%;
+    background-color: rgb(79, 82, 119);
+    border-radius: 0.5rem;
+    border: 3px solid black;
+    padding: 1rem;
+}
+
 .character_name_B {
     margin-top: 1rem;
     font-size: 3rem;
 }
 
-.contents_B {
-    margin-top: 7rem;
-    display: inline-block;
-    width: 48%;
-    height: 70%;
-    background-color: rgb(79, 82, 119);
-    border-radius: 0.5rem;
-    border: 3px solid black;
+.character_img_B {
+    width: 100%;
+    height: 85%;
+    background-color: bisque;
+    border-radius: 1rem;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 @media (max-width: 800px) {
@@ -71,7 +92,7 @@
         display: block;
         margin-top: 4.6rem;
         margin-bottom: 1rem;
-        width: 100%;
+        width: 94%;
         height: 40%;
         background-color: rgb(180, 133, 133);
         margin-top: 0;
@@ -79,7 +100,7 @@
     .contents_B {
         display: flex;
         flex-direction: column-reverse;
-        width: 100%;
+        width: 94%;
         height: 40%;
         background-color: rgb(79, 82, 119);
         margin-top: 0;
@@ -87,10 +108,23 @@
 
     .contents_container {
         width: 90%;
-        padding-top: 10rem;
+        padding-top: 4rem;
     }
 
-    .character_name_B {
+    .character_img_A {
+        height: 75%;
+    }
 
+    .character_img_B {
+        height: 78%;
+    }
+}
+
+@media (max-width: 450px) {
+    .contents_A {
+        width: 90%;
+    }
+    .contents_B {
+        width: 90%;
     }
 }
